# gmp_pro

./: .clang-format  .config.h  .gitignore  .gitmodules  BASIC_FILE_LIST  ChangeHistory.md  Doxyfile  facilities.json  gmp_core.h  gmp_core.hpp  gmp_header.h  install_gmp.bat  readme.md  reg_product.bat  test.bat  update_facilities_data.py  update_meta_data.py
.metadata/: product.json
.metadata/.tirex/: package.ccs.json  package.tirex.json
bsp/: bsp_header.h
bsp/user/: peripheral_mapping.c  peripheral_mapping.h  peripheral_setup.c  user_config.h  user_main.c
cctl/solver/: runge_kutta_4.hpp
core/: gmp_core.h  gmp_core.hpp  readme.md
core/.metadata/: product.json
core/dev/: async_port.h  device_prototype.hpp  devif.h  interface.h  io_concept.hpp  io_function.hpp  io_functions.c  io_functions.h  peripheral_driver.hpp  peripheral_port.h  prototypes.h  (+6 more)
csp/: chip_default_type.h  chip_port.h  chip_port.hpp  chip_support_selection.h  readme.md
ctl/: ctl.config.h  ctl_core.h  ctrl_config.h  readme.md
ctl/suite/motor_control/pmsm/implement/user_simulink_cmake/: CMakeLists.txt  gen_gmp_make_tool.bat
ext/: readme.md
img/: source picture of GMP core.pptx
lab/: lab.cpp  readme.md
manual/: Readme_CN.md  Start a Simulation Project using Simulink GMP SIL tools.md  Start a Sysconfig Project using GMP.md  code-standard.md
quick_start/: readme.md
slib/: install_gmp_simulink_lib.m  readme.md  upgrade_gmp_simulink_lib.m
user/: ctl_main.cpp  gmp_user_config.h  peripheral_mapping.cpp  peripheral_mapping.hpp  user_main.cpp  user_main.hpp
utility/: readme.md
(+1388 files in other folders)
